<resources>
    <string name="app_name">Weather Simple App UI</string>
    <string name="empty_description" />

    <string name="search_hint">City…</string>
    <string name="search_button">Search</string>

    <string name="current_weather">21°C</string>
    <string name="description_sunny_weather">Sunny weather</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_speed_value">14 km/h</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">23%</string>
    <string name="rain">Rain</string>
    <string name="rain_value">18%</string>

    <string name="title_hourly_weather">Today</string>
    <string name="other_cities_title">Other City</string>
    <string name="view_all_list_title">View all</string>

    <string name="menu_home">Home</string>
    <string name="menu_explorer">Explorer</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_profile">Profile</string>

    <string name="placeholder_hour_hourly">9 pm</string>
    <string name="placeholder_temperature_hourly">4°</string>

    <string name="title_wind_city_weather">Wind</string>
    <string name="location_title_city_weather">Location</string>
    <string name="location_value_city_weather">Ivanovo</string>
    <string name="temperature_value_city_weather">21°</string>

    <string name="value_temperature">%d°</string>
    <string name="value_percent">%1$d%%</string>
    <string name="value_speed">%d km/h</string>
</resources>