<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/bottom_btn1"
        android:title="@string/menu_home"
        app:cnb_background="@color/green"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/explorer"
        android:icon="@drawable/bottom_btn2"
        android:title="@string/menu_explorer"
        app:cnb_background="@color/green"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/bottom_btn3"
        android:title="@string/menu_bookmark"
        app:cnb_background="@color/green"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/bottom_btn4"
        android:title="@string/menu_profile"
        app:cnb_background="@color/green"
        app:cnb_iconColor="@color/white" />

</menu>